# haskell-graphql

./: README.md  graphql.cabal
src/Data/: GraphQL.hs
src/Data/GraphQL/: Document.hs  Parser.hs
test/: Spec.hs
