name:                graphql
version:             0.1.0.0
synopsis:            A graphql implementation.
description:         Please see README.md
homepage:            https://github.com/dat2/graphql#readme
license:             BSD3
license-file:        LICENSE
author:              Nicholas Dujay
maintainer:          nickdujay@gmail.com
copyright:           Copyright: (c) 2016 Nicholas Dujay
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.GraphQL
                     , Data.GraphQL.Document
                     , Data.GraphQL.Parser
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , megaparsec
                     , mtl
                     , text
  default-language:    Haskell2010

test-suite graphql-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , graphql
                     , filepath
                     , hspec
                     , QuickCheck
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dat2/graphql
